bugfix/pointer-icon
- before pointer icon was added just to every second smart sliders title,
now it is added to all properly without getting duplicated
- when title needs to be broken into two lines - which doesnt look good btw -
line-hegiht were making the title too high, now it kind of adjusted by
switching line-height off, but it still looks bad, it is just not that bad.

--- a/wp/wp-content/themes/flatsome-child/style.css
+++ b/wp/wp-content/themes/flatsome-child/style.css
@@ -1351,6 +1351,10 @@ animation: lineLoader 1.3s ease-in-out infinite;
   margin-bottom: -5px;
 }
 
+.slider-title a.n2-ow {
+  line-height: unset !important;
+}
+
 @media only screen and (max-width: 350px) {
   .slider-title a.n2-ow {
     font-size: 20px !important;
